test/tests/stages/5_local_variables/valid/extra_credit/compound_plus.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: to_add
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: to_add
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 4
                      None: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: to_add
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
